# Thesis

./: CouplingLayer.py  Flow.py  GatedResNet.py  README.md  Trainer.py  pyproject.toml  rqs.py
Gwave/: GatedResNet.py  inverseAutoregressiveFlow.py  maskedConvolution.py  pixelCNN.py  rqs.py  rqs2.py  train.py
autoregression/: Layers.py  Trainer.py
docs/: _config.yml  index.md  tutorial.md
