[tool.poetry]
name = "thesis"
version = "0.1.0"
description = "Thesis"
authors = ["Mario <mario.tsatsev@student.ru.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.0"
seaborn = "^0.11.1"
scipy = "^1.6.1"
pytorch-lightning = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
